--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.12.0",
     "dronestream": "^1.1.1",
     "express": "^4.12.2",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "opencv": "^3.0.0"
   }
 }
