--- a/v1.0/package.json
+++ b/v1.0/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "buffy": "0.0.5",
     "jsfeat": "0.0.4",
-    "ws": "^0.7.1"
+    "ws": "^0.7.1",
+    "xbox-controller": "^0.5.0"
   }
 }
